--- a/rpi/apps.json
+++ b/rpi/apps.json
@@ -4,7 +4,7 @@
     "title": "homeassistant",
     "description": "Home Assistant",
     "logo": "https://raw.githubusercontent.com/jriguera/docker-portainer/master/rpi/images/ha.png",
-    "image": "jriguera/rpi-homeassistant:latest",
+    "image": "jriguera/rpi-homeassistant",
     "platform": "linux",
     "note": "Docker image created from https://github.com/jriguera/docker-rpi-homeassistant",
     "categories": ["ha", "zwave", "iot"],
@@ -27,7 +27,7 @@
     "title": "mariadb",
     "description": "An Enhanced drop in replacement for Mysql",
     "logo": "https://raw.githubusercontent.com/jriguera/docker-portainer/master/rpi/images/mariadb.png",
-    "image": "jriguera/mariadb:latest",
+    "image": "jriguera/mariadb",
     "platform": "linux",
     "note": "Docker image created from https://github.com/jriguera/docker-rpi-mariadb",
     "categories": ["sql", "database", "mysql"],
@@ -72,7 +72,7 @@
     "title": "mosquitto",
     "description": "Mosquitto is a message broker that implements the MQTT protocol",
     "logo": "https://raw.githubusercontent.com/jriguera/docker-portainer/master/rpi/images/mosquitto.png",
-    "image": "jriguera/mosquitto:latest",
+    "image": "jriguera/mosquitto",
     "platform": "linux",
     "note": "Docker image created from https://github.com/jriguera/docker-rpi-mosquitto",
     "categories": ["mqtt", "mosquitto"],
@@ -112,7 +112,7 @@
     "title": "traefik",
     "description": "Traefik is a modern HTTP reverse proxy and load balancer that makes deploying microservices easy",
     "logo": "https://raw.githubusercontent.com/jriguera/docker-portainer/master/rpi/images/traefik.png",
-    "image": "jriguera/traefik:latest",
+    "image": "jriguera/traefik",
     "platform": "linux",
     "note": "Docker image created from https://github.com/jriguera/docker-rpi-traefik",
     "categories": ["http", "router", "traefik"],
